--- a/profiles/templates/profiles/myprofile.html
+++ b/profiles/templates/profiles/myprofile.html
@@ -20,7 +20,8 @@ my profile
       <form action="#" method="POST" class="ui form" enctype="multipart/form-data">
             {% csrf_token %}
             {{form.as_p}}
-      </div>
+      </form>
+    </div>
   </div>
   <div class="actions">
     <button type="submit" class="ui positive right labeled icon button">
@@ -77,6 +78,20 @@ my profile
                                 </ul>
                             </td>
                         </tr>
+                        <tr>
+                            <td>number of posts</td>
+                            <td>{{profile.get_posts_no}}</td>
+                        </tr>
+                        <tr>
+                            <td>number of likes given</td>
+                            <td>{{profile.get_likes_given_no}}</td>
+                        </tr>
+                        <tr>
+                            <td>number of likes received</td>
+                            <td>{{profile.get_likes_received_no}}</td>
+                        </tr>
+
+
                     </tbody>
                 </table>
             </div>
