posts,profiles done

--- a/templates/main/navbar.html
+++ b/templates/main/navbar.html
@@ -7,6 +7,12 @@
     <a href="" class="item">
         Home
     </a>
+    <a href="#" class="item">
+        Post
+    </a>
+    <a href="" class="item">
+        Profile
+    </a>
     {% endif %}
 
     <div class="right menu">
