--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -1,22 +1,65 @@
-{% extends "base.html" %}
-{% block title %}Log-in{% endblock %}
-{% block content %}
-    <h1>Log-in</h1>
-    {% if form.errors %}
-        <p>
-            Your username and password didn't match.
-            Please try again.
-        </p>
-    {% else %}
-        <p>Please, use the following form to log-in:</p>
-    {% endif %}
-    <div class="login-form">
-        <form action="{% url 'login' %}" method="post">
-            {{ form.as_p }}
-            {% csrf_token %}
-            <input type="hidden" name="next" value="{{ next }}" />
-            <p><input type="submit" value="Log-in"></p>
-        </form>
-        <p><a href="{% url 'password_reset' %}">Forgotten your password?</a></p>
-    </div>
-{% endblock %}
+{% load static %}
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+          integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href= {% static 'style.css' %}/>
+</head>
+<body style="background: url({% static 'accounts/images/bkg.png' %});
+                background-repeat: no-repeat; background-size: 100% 100%;
+                height: 100%; width:100%;">
+    {% block content %}
+
+        <div class="col-sm-12 col-md-12" style="display:flex; background-color: #3F4C60; height: 100%;">
+            <div style=" margin-top: 10%; margin-left: 30%">
+                <div class="card login_card shadow col-sm-12 " style="width: 30em; background-color: #3F4C60;" >
+                <div class="container">
+                    <h2 class="h2 signup_text">Login</h2>
+                    <form method="post">
+                        {% csrf_token %}
+                        {% if form.errors %}
+                            {% for field in form %}
+                                {% for error in field.errors %}
+                                    <div class="alert alert-danger">
+                                        <strong>{{ error|escape }}</strong>
+                                    </div>
+                                {% endfor %}
+                            {% endfor %}
+                            {% for error in form.non_field_errors %}
+                                <div class="alert alert-danger">
+                                             </div>
+                            {% endfor %}
+                        {% endif %}
+                        <div class="form-group">
+                            <input class="input-group form-control mb-4" type="text"
+                                   placeholder="username"
+                                   name="{{ form.username.html_name }}"
+                                   id="{{ form.username.id_for_label }}" aria-required="false">
+                        </div>
+                        <div class="form-group">
+                            <input class="input-group form-control mb-4" type="password"
+                                   placeholder="password"
+                                   name="{{ form.password.html_name }}"
+                                   id="{{ form.password.id_for_label}}" aria-required="false">
+                        </div>
+                        <div class="form-group">
+                            <small class="label-default " >Don't have an Account <a class="btn-link" href="{% url 'register' %}">
+                                <b style="color: red">Signup</b></a> </small>
+                        </div>
+                             <button type="submit" class="btn signup_button btn-lg btn-block">Login</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+
+            </div>
+
+    {% endblock content %}
+<!-- JS, Popper.js, and jQuery -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+</body>
+</html>
