--- a/templates/main/navbar.html
+++ b/templates/main/navbar.html
@@ -1,16 +1,16 @@
 <div class="ui inverted menu nav nb-7">
   <div class="ui container">
     <a href="" class="item">
-        <h3>bffbook</h3>
+        <h3>Black Community</h3>
     </a>
     {% if request.user.is_authenticated %}
-    <a href="" class="item">
+    <a href="{% url 'home-view' %}" class="item">
         Home
     </a>
-    <a href="#" class="item">
+    <a href="{% url 'posts:main_post_view' %}" class="item">
         Post
     </a>
-    <a href="" class="item">
+    <a href="{% url 'profiles:my-profile-view' %}" class="item">
         Profile
     </a>
     {% endif %}
@@ -47,7 +47,7 @@
                  {{ request.user }}
             </a>
 
-            <a href="" class="ui item">
+            <a href="{% url 'logout' %}" class="ui item">
                 Logout
             </a>
         {% else %}
